test/error/rtc/con2.rzy
// error: loop in connection graph for sub

Dummy = Elementary
  out : signal();
    
  inp : slot()
    out();
  end
end

Con2 = Composition
  inp : slot();
  out : signal();
    
  sub1 : Dummy;
  sub2 : Dummy;
  
  inp -> out;
  sub1.out -> sub2.inp;
  sub2.out -> sub1.inp;
end

